fix spacing for header

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -240,12 +240,11 @@ label {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 20px; /* Add spacing from the header */
+    margin-top: 100px;
 }
 
 header {
     text-align: center;
-    margin-bottom: 180px;
 }
 
 .spinner-border {
